--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Counter</title>
+    <meta name="description" content="Word Counter offers a free online tool to count words, Characters, sentences, and Paragraphs in your text. Try it now and improve your writing efficiency!">
+    <meta name="keywords" content="word counter, character counter, online tool, writing tool, word count, charactercount">
+    <title>Free Word Counter Tool</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -39,6 +41,7 @@
 
         </div>
     </div>
+    
     <div class="footer">
         <p>&copy; 2024 Word Counter</p>
     </div>
