--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Word Counter</h1>
     </div>
     <div>
-        <h1 class="text">Free Online Tool to count words, Characters , Sentences , Paragraphs and many more.</h1>
+        <h2 class="text">Online Tool to count words, Characters , Sentences , Paragraphs and many more.</h2>
     </div>
     <div class="container">
         <div class="input-section">
